Wed Feb 11 17:01:52 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (Socket.unix_server_loop): use
	  unix_server_socket with a block.

Wed Feb 11 16:54:26 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (Socket.unix_server_socket): close the
	  socket when the block exits.

Wed Feb 11 16:50:59 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (Socket.unix_server_socket): call the block
	  if given.  remove the socket file when the block exits.

Wed Feb 11 16:44:20 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ancillary_s_ip_pktinfo): make 3rd argument
	  optional.

Wed Feb 11 15:47:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (ary_make_shared): returns shared root array itself, and
	  frozen array can be shared.

Wed Feb 11 14:46:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* insns.def (setspecial, putstring): fixed typos in rdoc.

	* insns.def (toregexp): uses rb_ary_tmp_new(), and clears it after
	  used.

Wed Feb 11 14:08:23 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (anc_inspect_socket_rights): return 1 on
	  success.  0 on failure.
	  (anc_inspect_passcred_credentials): ditto.
	  (anc_inspect_socket_creds): ditto.
	  (anc_inspect_socket_creds): ditto.
	  (anc_inspect_socket_creds): ditto.
	  (anc_inspect_ip_recvdstaddr): ditto.
	  (anc_inspect_ip_pktinfo): ditto.
	  (anc_inspect_ipv6_pktinfo): ditto.
	  (ancillary_inspect): check family.

Wed Feb 11 12:55:07 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (anc_inspect_ip_pktinfo): make result bit
	  succinct.
	  (Init_ancdata): fix number of arguments.

Wed Feb 11 11:47:41 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ipsocket.c (Init_ipsocket): undef getpeereid at IPSocket.

Wed Feb 11 10:16:34 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: check getpeereid.

	* ext/socket/basicsocket.c (bsock_getpeereid): new method.

Wed Feb 11 09:58:59 2009  Tanaka Akira  <akr@fsij.org>
